<resources>
    <string name="app_name">VendingMachine</string>

    <string name="cola">Cola</string>
    <string name="chips">Chips</string>
    <string name="candy">Candy</string>


    <string name="penny">Penny</string>
    <string name="nickel">Nickel</string>
    <string name="dime">Dime</string>
    <string name="quarter">Quarter</string>

    <string name="exact_change">Exact Change</string>
    <string name="return_coins">Return Coins</string>

</resources>