<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.vendingmachine.ui.VendingMachineViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coin_amt"
            android:text="@{viewModel.mDisplayText}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display" />

        <TextView
            android:text="@{viewModel.mCoinAmtText}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/const_lay"
            app:layout_constraintTop_toBottomOf="@+id/coin_amt" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/const_lay">

            <Button
                android:id="@+id/cola"
                android:text="@string/cola"
                android:onClick="@{() -> viewModel.pressCola()}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/chips"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/chips"
                android:text="@string/chips"
                android:onClick="@{() -> viewModel.pressChips()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/candy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/candy"
                android:text="@string/candy"
                android:onClick="@{() -> viewModel.pressCandy()}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/return_coins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/const_lay">

            <Button
                android:id="@+id/penny"
                android:onClick="@{() -> viewModel.insertPenny()}"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/penny" />

            <Button
                android:id="@+id/dime"
                android:onClick="@{() -> viewModel.insertDime()}"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dime" />

            <Button
                android:id="@+id/nickle"
                android:onClick="@{() -> viewModel.insertNickle()}"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nickel" />

            <Button
                android:id="@+id/quarter"
                android:onClick="@{() -> viewModel.insertQuarter()}"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quarter" />

        </LinearLayout>

        <Button
            android:id="@+id/return_coins"
            android:text="@string/return_coins"
            android:onClick="@{() -> viewModel.returnCoins()}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>